--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,14 @@ build/
 
 ### VS Code ###
 .vscode/
+
+### application-dev ###
+.application-dev.yml
+
+### application-prod ###
+.application-prod.yml
+
+### application.yml ###
+.application.yml
+
+
