--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,23 +1,16 @@
-# application-dev.yaml
 spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/blog_db
     username: postgres
-    password: admin
+    password: codarty
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
-      ddl-auto: update
-    show-sql: true
-    properties:
-      hibernate:
-        format_sql: true
-
-  mail:
-    host: localhost
-    port: 1025
-    username:
-    password:
+      format_sql: true
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 10MB
 
 logging:
   level:
@@ -36,14 +29,6 @@ app:
   cache:
     timeToLiveSeconds: 3600
 
-  mail:
-    from: dev@yourblog.com
-    base-url: http://localhost:8080
-
 server:
   error:
     include-stacktrace: always
-
-jwt:
-  secret: dev-secret-key-should-be-very-long-and-secure
-  expiration: 86400000 # 24 hours
