--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,3 @@
-# application.yaml
 spring:
   profiles:
     active: dev
@@ -22,7 +21,7 @@ spring:
   servlet:
     multipart:
       max-file-size: 10MB
-      max-file-size-threshold: 2MB
+      file-size-threshold: 2MB # Corrected key
 
 server:
   port: 8080
