fix the problem

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,13 @@ build/
 
 ### VS Code ###
 .vscode/
+
+
+### application.yml ###
+application.yml
+
+### application-dev.yml ###
+application-dev.yml
+
+### application-prod.yml ###
+application-prod.yml
