--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,4 +1,3 @@
-# application-prod.yaml
 spring:
   datasource:
     url: jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
@@ -31,6 +30,7 @@ spring:
           starttls:
             enable: true
 
+# Production Logging
 logging:
   level:
     root: ERROR
@@ -42,19 +42,19 @@ logging:
     max-size: 10MB
     max-history: 10
 
+# Production App Configuration
 app:
   cors:
     allowed-origins: https://yourblog.com
   upload:
     directory: /var/uploads
-
   cache:
     timeToLiveSeconds: 7200
-
   mail:
     from: noreply@yourblog.com
     base-url: https://yourblog.com
 
+# Production Server Configuration
 server:
   port: ${PORT:8080}
   error:
@@ -62,6 +62,7 @@ server:
     whitelabel:
       enabled: false
 
+# Production Management Configuration
 management:
   endpoints:
     web:
@@ -70,9 +71,3 @@ management:
   endpoint:
     health:
       show-details: never
-
-jwt:
-  secret: ${JWT_SECRET}
-  expiration: 86400000 # 24 hours
-
-# SSL Configuration
