--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/blog_db
     username: postgres
-    password: codarty
+    password: admin
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
