dockerize Spring Boot app with PostgreSQL using Docker Compose, remove dotenv dependency, and migrate to environment-based configuration

--- a/.gitignore
+++ b/.gitignore
@@ -42,5 +42,5 @@ application-dev.yml
 ### application-prod.yml ###
 application-prod.yml
 
-### environment ###
+### Environment Variables ###
 .env
