--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,14 +1,14 @@
 spring:
   datasource:
-    url: jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}?sslmode=disable
+    url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME}?sslmode=disable
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
     driver-class-name: org.postgresql.Driver
     hikari:
       maximum-pool-size: 10
       minimum-idle: 5
+      connection-timeout: 30000
       idle-timeout: 300000
-      connection-timeout: 20000
 
   jpa:
     hibernate:
@@ -19,41 +19,18 @@ spring:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: true
 
-  mail:
-    host: ${MAIL_HOST}
-    port: ${MAIL_PORT}
-    username: ${MAIL_USERNAME}
-    password: ${MAIL_PASSWORD}
-    properties:
-      mail:
-        smtp:
-          auth: true
-          starttls:
-            enable: true
-
-# Development Logging
 logging:
   level:
     root: INFO
     org.springframework.web: DEBUG
     org.hibernate.SQL: DEBUG
     org.hibernate.type.descriptor.sql.BasicBinder: TRACE
-    com.yourblog: DEBUG
+    com.tech.blog: DEBUG
 
-# Development App Configuration
 app:
   cors:
     allowed-origins: http://localhost:4200
-  upload:
-    directory: uploads/dev
-  cache:
-    timeToLiveSeconds: 3600
 
-# Development Server Configuration
 server:
-  port: 8080
   error:
     include-stacktrace: always
-
-hikari:
-  connection-timeout: 30000 # Increase to 30 seconds
